# fyre_fractal_function

./: Cargo.toml  default.nix
benches/: bench.rs
results/: results_start_0_end_1_a_0.5_b_11_n_256.txt  results_start_0_end_1_a_0.5_b_11_n_50.txt  results_start_0_end_1_a_0.5_b_11_n_512.txt  results_start_0_end_1_a_0.5_b_9_n_256_counts.txt  results_start_0_end_1_a_0.5_b_9_n_512.txt  results_start_0_end_1_a_0.5_b_9_n_512_counts.txt  results_start_0_end_4_a_0.5_b_9_n_256.txt  results_start_0_end_4_a_0.5_b_9_n_256_counts.txt
src/: lib.rs  main.rs
